--- a/Frontend/index_ngo.html
+++ b/Frontend/index_ngo.html
@@ -42,13 +42,21 @@
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active"><a href="index_ngo.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="about_ngo.html" class="nav-link">About</a></li>
+          <li class="nav-item "><a href="about_ngo.html" class="nav-link">About</a></li>
           <li class="nav-item"><a href="gallery_ngo.html" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="contact_ngo.html" class="nav-link">Contact</a></li>
           <li class="nav-item"><a href="ngolist_ngo.html" class="nav-link">NGO</a></li>
-          <li class="nav-item"><a href="food_transations_ngo.html" class="nav-link">Donations</a></li>
-          <li class="nav-item"><a href="accepted_donations_ngo.html" class="nav-link">Accepted Donations</a></li>
-          <li class="nav-item"><a href="donations_history_ngo.html" class="nav-link">Donations History</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Donations
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="food_transations_ngo.html">Incoming Donations</a></li>
+              <li><a class="dropdown-item" href="accepted_donations_ngo.html">Accepted Donations</a></li>
+              <li><a class="dropdown-item" href="donations_history_ngo.html">Donations History</a></li>
+            </ul>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
@@ -62,7 +70,6 @@
           </li>
         </ul>
       </div>
-
     </div>
   </nav>
   <!-- END nav -->
