Profile, restaurant - 3 donations

--- a/Frontend/Profile_ngo.html
+++ b/Frontend/Profile_ngo.html
@@ -169,12 +169,14 @@
                         <p><strong>Phone Number:</strong> <span id="secondaryContactPhone">+1987654321</span></p>
                     </div>
                     <!-- Card Footer with Buttons -->
-                    <div class="card-footer text-center">
+                    <div class="text-center">
                         <button class="btn btn-primary btn-view-photos ml-2"
-                            onclick="showPhotos(['images/person_1.jpg', 'images/person_2.jpg'])">View Photos</button>
-                        <button class="btn btn-danger" id="deleteAccount" style="border-radius: 5px;">Delete
+                            onclick="showPhotos(['images/person_1.jpg', 'images/person_2.jpg'])"
+                            style="margin: 1rem;">View Photos</button>
+                        <button class="btn btn-danger" id="deleteAccount"
+                            style="border-radius: 5px; margin: 1rem;">Delete
                             Account</button>
-                        <button class="btn btn-success" id="editAccount" style="border-radius: 5px;">Edit
+                        <button class="btn btn-success" id="editAccount" style="border-radius: 5px; margin: 1rem;">Edit
                             Account</button>
                     </div>
                 </div>
