--- a/Frontend/Login.html
+++ b/Frontend/Login.html
@@ -88,7 +88,7 @@
                     <p class="d-block" style="margin-bottom: 0.2rem;">Don't have an account? <a
                         href="index.html">Register</a>
                     </p>
-                    <a href="#" class="d-block" style="margin-bottom: 1rem;">Forgot password?</a>
+                    <a href="Forgot_Password.html" class="d-block" style="margin-bottom: 1rem;">Forgot password?</a>
                   </div>
                   <button type="submit" class="btn btn-primary btn-block" style="border-radius: 5px;">Login</button>
                 </form>
