--- a/Frontend/Profile_Ind.html
+++ b/Frontend/Profile_Ind.html
@@ -85,6 +85,59 @@
         .card-body {
             font-size: large;
         }
+
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 60px;
+            height: 34px;
+        }
+
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            transition: .4s;
+            border-radius: 34px;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            transition: .4s;
+            border-radius: 50%;
+        }
+
+        input:checked+.slider {
+            background-color: #28a745;
+            /* Change to match your theme */
+        }
+
+        input:checked+.slider:before {
+            transform: translateX(26px);
+        }
+
+        .availability-label {
+            display: inline-block;
+            margin-left: 10px;
+            vertical-align: middle;
+            font-weight: bold;
+        }
     </style>
 </head>
 
@@ -167,9 +220,19 @@
                     </div>
                     <!-- Card Footer with Buttons -->
                     <div class="text-center">
+                        <div class="availability-toggle" style="margin: 1rem;">
+                            <label class="switch">
+                                <input type="checkbox" id="availabilityMode">
+                                <span class="slider round"></span>
+                            </label>
+                            <label for="availabilityMode" class="availability-label mt-3">Availability Mode</label>
+                            <!-- Javscript of it is at end-->
+                        </div>
                         <button class="btn btn-primary btn-view-photos ml-2"
-                            onclick="showPhotos(['images/person_1.jpg', 'images/person_2.jpg'])" style="margin: 1rem;">View Photos</button>
-                        <button class="btn btn-danger" id="deleteAccount" style="border-radius: 5px; margin: 1rem;">Delete
+                            onclick="showPhotos(['images/person_1.jpg', 'images/person_2.jpg'])"
+                            style="margin: 1rem;">View Photos</button>
+                        <button class="btn btn-danger" id="deleteAccount"
+                            style="border-radius: 5px; margin: 1rem;">Delete
                             Account</button>
                         <button class="btn btn-success" id="editAccount" style="border-radius: 5px; margin: 1rem;">Edit
                             Account</button>
@@ -460,6 +523,25 @@
             // Hide the modal
             $('#editProfileModal').modal('hide');
         });
+    </script>
+    <script>
+        function handleAvailabilityToggle() {
+            var toggleSwitch = document.getElementById('availabilityMode');
+            toggleSwitch.addEventListener('change', function () {
+                if (toggleSwitch.checked) {
+                    // Handle when toggle is turned ON
+                    console.log('Availability Mode ON');
+                    // Perform actions when availability mode is ON
+                } else {
+                    // Handle when toggle is turned OFF
+                    console.log('Availability Mode OFF');
+                    // Perform actions when availability mode is OFF
+                }
+            });
+        }
+
+        // Call the function to initialize the toggle functionality
+        handleAvailabilityToggle();
     </script>
     <script src="js/ngo_cards.js"></script>
     <script src="js/jquery.min.js"></script>
