--- a/Frontend/Verification_ngo_admin.html
+++ b/Frontend/Verification_ngo_admin.html
@@ -23,7 +23,6 @@
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="css/jquery.timepicker.css">
 
-
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
@@ -76,9 +75,40 @@
 
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="admin_Ind.html" class="nav-link">Volunteer</a></li>
-                    <li class="nav-item"><a href="admin_ngo.html" class="nav-link">NGO</a></li>
-                    <li class="nav-item"><a href="admin_restaurant.html" class="nav-link">Restaurant</a></li>
+                    <li class="nav-item"><a href="index_admin.html" class="nav-link">Home</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Volunteers
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="Verification_Ind_admin.html">Pending Verification</a>
+                            </li>
+                            <li><a class="dropdown-item" href="All_Ind_admin.html">All Volunteers</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            NGO
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="Verification_ngo_admin.html">Pending Verification</a>
+                            </li>
+                            <li><a class="dropdown-item" href="All_ngo_admin.html">All NGOs</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Restaurant
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="Verification_restaurant_admin.html">Pending
+                                    Verification</a></li>
+                            <li><a class="dropdown-item" href="All_restaurant_admin.html">All Restaurants</a></li>
+                        </ul>
+                    </li>
                     <li class="nav-item">
                         <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
                     </li>
@@ -89,45 +119,7 @@
     <!-- END nav -->
 
     <div class="container" style="margin-top: 6rem">
-        <!-- Individual Verification Card -->
-        <div class="container mt-5">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <h5 class="card-title">Username: abc123</h5>
-                                    <p class="card-text">Restaurant Name: Sunshine</p>
-                                    <p class="card-text">Type: Restaurant</p>
-                                    <p class="card-text">Business License Number: 12345</p>
-                                    <p class="card-text">Website URL: cricbuzz.com</p>
-                                    <p class="card-text">Manager Name: Kaleshbhai</p>
-                                    <p class="card-text">Primary Contact Email: abc@gmail.com</p>
-                                    <p class="card-text">Primary Contact Phone: 98767898722</p>
-                                </div>
-                                <div class="col-md-6">
-                                    <p class="card-text">Address Line 1: 123 Main St</p>
-                                    <p class="card-text">Address Line 2: Apt 4B</p>
-                                    <p class="card-text">City: City</p>
-                                    <p class="card-text">State: State</p>
-                                    <p class="card-text">Zip Code: 12345</p>
-                                    <p class="card-text">Country: Country</p>
-                                    <p class="card-text">Latitude: 12.3456</p>
-                                    <p class="card-text">Longitude: 78.9012</p>
-                                </div>
-                            </div>
-                            <div class="text-center mt-3">
-                                <button class="btn btn-success btn-verify" onclick="verifyRestaurant(this)">Verify
-                                    Restaurant</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Individual Verification Card -->
+        <!-- Organization Verification Card -->
         <div class="container mt-2">
             <div class="row">
                 <div class="col-md-12">
@@ -135,29 +127,25 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <h5 class="card-title">Username: abc123</h5>
-                                    <p class="card-text">Restaurant Name: Sunshine</p>
-                                    <p class="card-text">Type: Restaurant</p>
-                                    <p class="card-text">Business License Number: 12345</p>
-                                    <p class="card-text">Website URL: cricbuzz.com</p>
-                                    <p class="card-text">Manager Name: Kaleshbhai</p>
-                                    <p class="card-text">Primary Contact Email: abc@gmail.com</p>
-                                    <p class="card-text">Primary Contact Phone: 98767898722</p>
+                                    <h5 class="card-title">Organization Name: Example Organization</h5>
+                                    <p class="card-text">Registration Number: 123456789</p>
+                                    <p class="card-text">Tax ID/EIN: 98-7654321</p>
+                                    <p class="card-text">Website URL: <a href="http://example.org">example.org</a></p>
+                                    <p class="card-text">Address Line 1: 456 Another St</p>
+                                    <p class="card-text">Address Line 2: Suite 300</p>
                                 </div>
                                 <div class="col-md-6">
-                                    <p class="card-text">Address Line 1: 123 Main St</p>
-                                    <p class="card-text">Address Line 2: Apt 4B</p>
-                                    <p class="card-text">City: City</p>
-                                    <p class="card-text">State: State</p>
-                                    <p class="card-text">Zip Code: 12345</p>
-                                    <p class="card-text">Country: Country</p>
+                                    <p class="card-text">City: Cityville</p>
+                                    <p class="card-text">State: Stateville</p>
+                                    <p class="card-text">Zip Code: 54321</p>
+                                    <p class="card-text">Country: Countryland</p>
                                     <p class="card-text">Latitude: 12.3456</p>
                                     <p class="card-text">Longitude: 78.9012</p>
                                 </div>
                             </div>
                             <div class="text-center mt-3">
-                                <button class="btn btn-success btn-verify" onclick="verifyRestaurant(this)">Verify
-                                    Restaurant</button>
+                                <button class="btn btn-success btn-verify" onclick="verifyOrganization(this)">Verify
+                                    NGO</button>
                             </div>
                         </div>
                     </div>
@@ -176,8 +164,7 @@
                     <div class="ftco-footer-widget mb-4">
                         <h2 class="ftco-heading-2">About Us</h2>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                            there live the
-                            blind texts.</p>
+                            there live the blind texts.</p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                             <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                             <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -247,13 +234,12 @@
             <div class="row">
                 <div class="col-md-12 text-center">
 
-                    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    <p>
                         Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> All rights reserved | This template
-                        is made with
-                        <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                            target="_blank">Colorlib</a>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        <script>
+                            document.write(new Date().getFullYear());
+                        </script> All rights reserved | This template is made with <i class="icon-heart"
+                            aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
                     </p>
                 </div>
             </div>
@@ -262,7 +248,7 @@
     <!-- Footer End -->
 
     <script>
-        function verifyRestaurant(button) {
+        function verifyOrganization(button) {
             button.textContent = 'Verified';
             button.classList.remove('btn-success');
             button.classList.add('btn-secondary');
@@ -278,6 +264,24 @@
             }
         });
     </script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
+    <script src="js/jquery.waypoints.min.js"></script>
+    <script src="js/jquery.stellar.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/aos.js"></script>
+    <script src="js/jquery.animateNumber.min.js"></script>
+    <script src="js/bootstrap-datepicker.js"></script>
+    <script src="js/jquery.timepicker.min.js"></script>
+    <script src="js/scrollax.min.js"></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+    <script src="js/google-map.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
