--- a/Frontend/about_Ind.html
+++ b/Frontend/about_Ind.html
@@ -46,8 +46,16 @@
           <li class="nav-item"><a href="gallery_Ind.html" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="contact_Ind.html" class="nav-link">Contact</a></li>
           <li class="nav-item"><a href="ngolist_Ind.html" class="nav-link">NGO</a></li>
-          <li class="nav-item">
-            <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              <i class="icon-user"></i>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
+              <a class="dropdown-item" href="#">View Profile</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="index.html" id="logoutLinkNavbar">Logout</a>
+            </div>
           </li>
         </ul>
       </div>
