--- a/Frontend/index_Ind.html
+++ b/Frontend/index_Ind.html
@@ -46,8 +46,16 @@
           <li class="nav-item"><a href="gallery_Ind.html" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="contact_Ind.html" class="nav-link">Contact</a></li>
           <li class="nav-item"><a href="ngolist_Ind.html" class="nav-link">NGO</a></li>
-          <li class="nav-item">
-            <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              <i class="icon-user"></i>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
+              <a class="dropdown-item" href="#">View Profile</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="index.html" id="logoutLinkNavbar">Logout</a>
+            </div>
           </li>
         </ul>
       </div>
@@ -64,9 +72,6 @@
             Option of Our Life</h1>
           <p class="mb-5" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Created by Two Responsible
             Person</p>
-
-          <button type="button" onclick="scrollToSection()" class="btn btn-outline-dark btn-lg"
-            style="border: none; border-radius: 5px; color: white;">Partner with Us</button>
         </div>
       </div>
     </div>
