--- a/Frontend/index_admin.html
+++ b/Frontend/index_admin.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="css/jquery.timepicker.css">
 
+
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
@@ -75,9 +76,40 @@
 
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="admin_Ind.html" class="nav-link">Volunteer</a></li>
-                    <li class="nav-item"><a href="admin_ngo.html" class="nav-link">NGO</a></li>
-                    <li class="nav-item"><a href="admin_restaurant.html" class="nav-link">Restaurant</a></li>
+                    <li class="nav-item active"><a href="index_admin.html" class="nav-link">Home</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Volunteers
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="Verification_Ind_admin.html">Pending Verification</a>
+                            </li>
+                            <li><a class="dropdown-item" href="All_Ind_admin.html">All Volunteers</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            NGO
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="Verification_ngo_admin.html">Pending Verification</a>
+                            </li>
+                            <li><a class="dropdown-item" href="All_ngo_admin.html">All NGOs</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Restaurant
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="Verification_restaurant_admin.html">Pending
+                                    Verification</a></li>
+                            <li><a class="dropdown-item" href="All_restaurant_admin.html">All Restaurants</a></li>
+                        </ul>
+                    </li>
                     <li class="nav-item">
                         <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
                     </li>
@@ -87,40 +119,11 @@
     </nav>
     <!-- END nav -->
 
-    <div class="container" style="margin-top: 6rem">
-        <!-- Organization Verification Card -->
-        <div class="container mt-2">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <h5 class="card-title">Organization Name: Example Organization</h5>
-                                    <p class="card-text">Registration Number: 123456789</p>
-                                    <p class="card-text">Tax ID/EIN: 98-7654321</p>
-                                    <p class="card-text">Website URL: <a href="http://example.org">example.org</a></p>
-                                    <p class="card-text">Address Line 1: 456 Another St</p>
-                                    <p class="card-text">Address Line 2: Suite 300</p>
-                                </div>
-                                <div class="col-md-6">
-                                    <p class="card-text">City: Cityville</p>
-                                    <p class="card-text">State: Stateville</p>
-                                    <p class="card-text">Zip Code: 54321</p>
-                                    <p class="card-text">Country: Countryland</p>
-                                    <p class="card-text">Latitude: 12.3456</p>
-                                    <p class="card-text">Longitude: 78.9012</p>
-                                </div>
-                            </div>
-                            <div class="text-center mt-3">
-                                <button class="btn btn-success btn-verify" onclick="verifyOrganization(this)">Verify
-                                    NGO</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="container text-center" style="margin: 6rem 0 0 10rem">
+        <h2>Hello Admin!</h2>
+    </div>
+
+    <div class="mt-5" style="height: 200rem; width: 100rem;">
 
     </div>
 
@@ -133,7 +136,8 @@
                     <div class="ftco-footer-widget mb-4">
                         <h2 class="ftco-heading-2">About Us</h2>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                            there live the blind texts.</p>
+                            there live the
+                            blind texts.</p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                             <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                             <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -203,12 +207,13 @@
             <div class="row">
                 <div class="col-md-12 text-center">
 
-                    <p>
+                    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         Copyright &copy;
-                        <script>
-                            document.write(new Date().getFullYear());
-                        </script> All rights reserved | This template is made with <i class="icon-heart"
-                            aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                        <script>document.write(new Date().getFullYear());</script> All rights reserved | This template
+                        is made with
+                        <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
+                            target="_blank">Colorlib</a>
+                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </p>
                 </div>
             </div>
@@ -216,14 +221,6 @@
     </footer>
     <!-- Footer End -->
 
-    <script>
-        function verifyOrganization(button) {
-            button.textContent = 'Verified';
-            button.classList.remove('btn-success');
-            button.classList.add('btn-secondary');
-            button.disabled = true;
-        }
-    </script>
     <script>
         document.getElementById('logoutLink').addEventListener('click', function (event) {
             event.preventDefault(); // Prevent the default link action
@@ -233,6 +230,24 @@
             }
         });
     </script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
+    <script src="js/jquery.waypoints.min.js"></script>
+    <script src="js/jquery.stellar.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/aos.js"></script>
+    <script src="js/jquery.animateNumber.min.js"></script>
+    <script src="js/bootstrap-datepicker.js"></script>
+    <script src="js/jquery.timepicker.min.js"></script>
+    <script src="js/scrollax.min.js"></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+    <script src="js/google-map.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
